SERVER-28071 add missing FTS indexing error codes to replication whitelist